--- a/GovUk.Frontend.AspNetCore.Extensions/Styles/_govuk-link.scss
+++ b/GovUk.Frontend.AspNetCore.Extensions/Styles/_govuk-link.scss
@@ -5,7 +5,3 @@
 .govuk-link {
     font-weight: $tpr-font-weight-semi-bold; 
 }
-
-.govuk-notification-banner--success .govuk-notification-banner__link:link{
-    color: $tpr-colour-white;
-}
